# lowmem-cpio-initrd

./: Cargo.toml
src/: main.rs
