[package]
name = "shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpio = "0.2.1"
fscommon = "0.1.1"
libcryptsetup-rs = "0.5.0"
lzma-rs = "0.2.0"
nix = "0.24.0"
syscalls = "0.6.2"
uuid = "0.8.2"
zstd = "0.11.0"
